# lizard-state-riir

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  index.manifest.json  index.pck  index.service.worker.js
.cargo/: config.toml
.github/: preprocess-gdscript.sh
.github/workflows/: deploy-to-ghpages.yml  github-pages.yml  rust.yml  slow-testing.yml  smoke-testing.yml
coverage/: index.html
engine/: Cargo.toml
engine/src/: actions.rs  data.rs  entity.rs  floor.rs  lazyrc.rs  lib.rs  main.rs  mapgen.rs  pathfinding.rs  positional.rs  strategy.rs  ugheuaghe.txt  writer.rs
engine/src/actions/: characters.rs  erased_serializable.rs  events.rs  example.rs  known_serializable.rs  public.rs  serializable_wrapper.rs  static_dispatch.rs  upcast_indirection.rs  utils.rs
engine/src/actions/characters/: axolotl_nano.rs  max_tegu.rs
engine/src/floor/: map.rs  mutators.rs  occupiers.rs
engine/src/floor/map/: vision.rs
engine/src/mapgen/: graph_representation.rs  planar_drawing.rs
engine/src/mapgen/graph_representation/: builder.rs  generator.rs  traversal.rs
engine/src/positional/: algorithms.rs  fov.rs
engine/tests/: modding.rs  rkyv.rs
godot/: BuildInfo.gd  BuildInfo.gd.uid  DamagePopup.gd  DiscardBasis.gd  EntitySprite.gd  FloorCamera.gd  LizardState.gdextension  LizardState.gdextension.uid  Particles.tscn  ci-version.txt  export_presets.cfg  icon.svg.import  main.tscn  project.godot  smol_star.png.import  tegu.png.import  test.gd
godot-glue/: Cargo.toml
godot-glue/src/: actions.rs  builders.rs  events.rs  floor.rs  lib.rs  logic.rs  positional.rs  resources.rs  values.rs
godot-glue/src/actions/: public.rs
godot-glue/src/builders/: actionset.rs  entity.rs  known_unaimed.rs
godot-glue/src/floor/: snapshot.rs
godot-glue/src/logic/: actions.rs  floor.rs
godot-glue/src/logic/actions/: public.rs
godot-glue/src/logic/floor/: snapshot.rs
godot-glue/src/resources/: action.rs  actionset.rs
godot-glue/src/values/: events.rs  positional.rs
godot-project/: LizState.gdextension  LizState.gdextension.uid  icon.svg.import  project.godot
godot-project/Crawler/: Main.tscn
godot-project/temp/: bingus.gd  bingus.gd.uid
godot/Crawler/: Floor.gd  Floor.tscn  FloorContainer.gd  FloorContainer.gd.uid  FloorContainer.tscn  MVP-Scaled.tscn  cursor.png.import
godot/Dogica/: dogicapixel.otf.import
lizstate-design/: design.md  overview.md  story.md  technical.md
lizstate-geom/: Cargo.toml
lizstate-sequence-enumeration/: Cargo.toml
lizstate-tiling/: Cargo.toml
lizstate-tiling/src/: coords.rs  custom_space.rs  direction.rs  euclidean_plane.rs  expansion.rs  free_group.rs  group.rs  lib.rs  path.rs  path_equality.rs  tileset.rs  tiling.rs  tiling_graph.rs  walk.rs
lizstate-tiling/src/custom_space/: builder.rs  shared.rs  tiling_graph.rs  typestate.rs
lizstate-tiling/src/euclidean_plane/: impl_isagroup.rs
lizstate-tiling/src/free_group/: impl_isagroup.rs
lizstate-tiling/src/path/: array_backed.rs  bits_backed.rs  efficient.rs  vec_backed.rs
lizstate-tiling/src/tiling/: edge_tiling.rs
lizstate-tiling/src/walk/: direction_sequence.rs  enumeration.rs  generic_iter.rs  reduced.rs  reduced_enum.rs  rotation_sequence.rs  slice.rs  traits.rs  vec.rs
lizstate-tiling/tests/: has_square_tiling.rs  impl_tileset.rs  lizstate-usecase.rs
rust-workspace/: .gitignore  Cargo.toml
src/: actions.rs  data.rs  main.rs
(+211 files in other folders)
