[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ptr_meta pinned by rkyv.
ptr_meta = "~0.1.3"
# TODO: Decide if validation necessary (aka we yolo deserialization).
rkyv = { version = "0.7.44", features = ["validation"] }
rkyv_dyn = "0.7.44"
rkyv_typename = "0.7.44"
