[package]
name = "engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_delegate = "0.2.0"
lizstate-geom = { version = "0.1.0", path = "../lizstate-geom" }
# ptr_meta pinned by rkyv.
# ptr_meta = "~0.1.3"
# TODO: Decide if validation necessary (aka we yolo deserialization).
# rkyv = { version = "0.7.44", features = ["validation"] }
# rkyv_dyn = "0.7.44"
# rkyv_typename = "0.7.44"
tracing = "0.1.40"
