[package]
name = "godot-glue"
version = "0.1.0"
edition = "2021"

[lib]
# Compile this crate to a dynamic C library.
# Also compile as lib for testing.
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.1"
engine = { path = "../engine" }
petname = { version = "1.1.3" }
tracing-tracy = "0.11.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
