[package]
name = "godot-glue"
version = "0.1.0"
edition = "2021"

[lib]
# Compile this crate to a dynamic C library.
# Also compile as lib for testing.
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.1"
engine = { path = "../engine" }
petname = { version = "1.1.3" }
tracing-tracy = { version = "0.11.2", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
profiling = [
    # Default features of tracing-tracy
    "tracing-tracy/broadcast",
    "tracing-tracy/callstack-inlines",
    "tracing-tracy/code-transfer",
    "tracing-tracy/context-switch-tracing",
    "tracing-tracy/enable",
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing"
]