[package]
name = "lizstate-tiling"
version = "0.1.0"
edition = "2024"

[dependencies]
lizstate-sequence-enumeration = { path = "../lizstate-sequence-enumeration" }
petgraph = { version = "0.8.2", optional = true }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["std"]
std = ["thiserror/std"]
